--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".profile.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".profile.ResetPinActivity"
+            android:name=".profile.ChangePasswordActivity"
             android:exported="false" />
         <activity
             android:name=".login_register.SetupProfileActivity"
